exercise5/condor/689.0-error.txt
  File "Exercise5.py", line 135
    Dense(2),activation="softmax"])
                       ^
SyntaxError: invalid syntax
